syntax = "proto3";

package inventory;

option go_package = "./inventory";

service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string product_id = 1;
}

message StockResponse {
  int32 quantity = 1;
  bool is_available = 2;
}